core project skeleton setup

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "hono": "4.8.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-router-dom": "^6.28.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
