--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^6.28.0",
+    "vite-plugin-pwa": "^1.0.2",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
